# cotai-dev

./: .env.template  .gitignore  .pre-commit-config.yaml  DISASTER_RECOVERY.md  LICENSE  Makefile  PRODUCTION_SUMMARY.md  README.md  SECURITY.md  TESTING.md  docker-compose.production.yml  docker-compose.yml  init.sh
.docs/: CONTRIBUTING.md  (+6 more)
backend/: Dockerfile  IMPLEMENTATION_SUMMARY.md  QUOTATION_README.md  alembic.ini  pyproject.toml  worker.py
backend/alembic/: env.py
backend/alembic/versions/: 0001_auth_tables.py  0002_document_processing.py  0003_message_tables.py  0004_quotation_tables.py  0005_add_performance_indexes.py  README
backend/app/: main.py
backend/app/core/: auth.py  celery.py  config.py
backend/app/db/: init_db.py  mongodb.py  mongodb_client.py  redis.py  repositories.py  session.py  utils.py
backend/app/middleware/: __init__.py  compression.py  rate_limiting.py  setup.py
backend/app/models/: __init__.py  base.py  document.py  message.py  metric.py  quotation.py  user.py
backend/app/services/: advanced_cache.py  alerts.py  cache.py  cache_invalidation.py  document_storage.py  email.py  message_attachments.py  messages.py  metrics.py  notifications.py  oauth.py  quotation.py  security.py  structured_fields.py  text_extraction.py
backend/app/tasks/: __init__.py  document_processing.py
backend/app/utils/: date_utils.py
backend/scripts/: migrations.sh  seed_quotation_data.py  test_document_api.sh
backend/tests/: __init__.py  conftest.py
backend/tests/api/: test_auth.py  test_document.py  test_messages.py  test_metrics.py  test_quotation.py  test_quotation_performance.py
(+174 files in other folders)
